--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -41,3 +41,8 @@ input[type="color"]::-webkit-color-swatch {
 ) {
   scrollbar-gutter: auto;
 }
+
+.indicator-item {
+  bottom: 5px;
+  left: 5px;
+}
